--- a/index.html
+++ b/index.html
@@ -99,9 +99,9 @@
         <div class="social-today">
             <span class="today today-1">Today</span>
             <img src="img/heart.png" class="heart d-inline-block" alt=""/>
-            <b class="likes">12,800</b>
+            <b class="twentyth-likes">12,800</b>
             <img src="img/message.png" class="messages d-inline-block" alt=""/>
-            <b class="likes">3,100</b>
+            <b class="three-th-likes">3,100</b>
         </div>
         <div class="social-date">
             <span class="date-1">9-08-2016</span>
